tests/error/inout_errors/field_borrow_twice.err
Error: Copy violation (at $FILE:21:13)
   | 
19 | @guppy
20 | def test(s: MyStruct1 @owned) -> None:
21 |     foo(s.x, s.x)
   |              ^^^ Field `s.x` cannot be borrowed ...

Note:
   | 
20 | def test(s: MyStruct1 @owned) -> None:
21 |     foo(s.x, s.x)
   |         --- ... since field `s.x` with non-copyable type `MyStruct2` was
   |             already borrowed here

Guppy compilation failed due to 1 previous error
